--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -2,9 +2,9 @@ name: "nativeCompile"
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
 
 jobs:
   native-compile:
