--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     runtimeOnly "ch.qos.logback:logback-classic:1.2.11"
+    runtimeOnly "net.logstash.logback:logstash-logback-encoder:7.2"
 }
 
 
