--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,6 @@ dependencies {
 
     runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
-    runtimeOnly "ch.qos.logback:logback-classic:1.2.11"
-    runtimeOnly "net.logstash.logback:logstash-logback-encoder:7.2"
-
 
 
     // Kotlin
@@ -61,6 +58,14 @@ dependencies {
     //testImplementation "org.mockito:mockito-junit-jupiter:$mockitoJunitJupiterVersion"
     /// Assertions
     testImplementation "org.assertj:assertj-core:$assertjVersion"
+
+    // Logging
+    // See http://saltnlight5.blogspot.com/2013/08/how-to-configure-slf4j-with-different.html for a quick introduction to slf4j
+    implementation "io.github.microutils:kotlin-logging-jvm:$kotlinLoggingVersion"
+    runtimeOnly "ch.qos.logback:logback-classic:$logbackVersion"
+    runtimeOnly "net.logstash.logback:logstash-logback-encoder:$logstashLogbackVersion"
+    runtimeOnly "com.mattbertolini:liquibase-slf4j:$liquibaseSlf4jVersion" // makes Liquibase use SLF4J instead of java.util.logging
+    runtimeOnly "org.slf4j:jcl-over-slf4j:$jclOverSlf4jVersion" // redirect Jakarta/Apache Commons Logging to SLF4J
 }
 
 
