--- a/build.gradle
+++ b/build.gradle
@@ -32,14 +32,11 @@ dependencies {
     kapt("io.micronaut:micronaut-http-validation")
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
-    implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
-    implementation("jakarta.annotation:jakarta.annotation-api")
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
 
-    runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
 
 
@@ -71,6 +68,13 @@ dependencies {
     implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     kapt platform("io.micronaut:micronaut-bom:$micronautVersion")
     kaptTest platform("io.micronaut:micronaut-bom:$micronautVersion")
+
+    // Micronaut Core
+    implementation "io.micronaut:micronaut-runtime"
+    implementation "io.micronaut.kotlin:micronaut-kotlin-runtime"
+    implementation "javax.annotation:javax.annotation-api"
+    runtimeOnly "com.fasterxml.jackson.module:jackson-module-kotlin"
+    implementation 'org.reactivestreams:reactive-streams' // seems to be needed in Micronaut 3.0.1
 }
 
 
