--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,6 @@ repositories {
 
 dependencies {
     kapt("io.micronaut:micronaut-http-validation")
-    implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
@@ -88,6 +87,13 @@ dependencies {
     // Micronaut Validation
     kapt "io.micronaut:micronaut-validation"
     //implementation 'io.micronaut.configuration:micronaut-hibernate-validator' // if full Bean Validator 2.0 compliance is needed
+
+    // Micronaut HTTP Server
+    implementation "io.micronaut:micronaut-http-server-netty"
+
+    // Micronaut HTTP Client
+    implementation "io.micronaut:micronaut-http-client"
+
 }
 
 
