--- a/build.gradle
+++ b/build.gradle
@@ -112,6 +112,10 @@ dependencies {
     //runtimeOnly "org.apache.derby:derby:$derbyVersion"
     /// Database Migration
     implementation "io.micronaut.liquibase:micronaut-liquibase"
+
+    // Micronaut Security
+    kapt "io.micronaut.security:micronaut-security-annotations"
+    implementation "io.micronaut.security:micronaut-security"
 }
 
 
