--- a/build.gradle
+++ b/build.gradle
@@ -123,6 +123,12 @@ dependencies {
     // Micronaut OpenAPI integration
     kapt "io.micronaut.openapi:micronaut-openapi"
     implementation "io.swagger.core.v3:swagger-annotations"
+
+    // Micronaut gRPC
+    implementation "io.micronaut.grpc:micronaut-grpc-server-runtime"
+    implementation "io.micronaut.grpc:micronaut-grpc-client-runtime"
+    implementation "io.grpc:grpc-services:$grpcVersion"
+    implementation "io.grpc:grpc-kotlin-stub:$grpcKotlinVersion"
 }
 
 
