--- a/build.gradle
+++ b/build.gradle
@@ -135,19 +135,22 @@ dependencies {
 application {
     mainClass.set("com.example.ApplicationKt")
 }
+
+// Java configuration
 java {
-    sourceCompatibility = JavaVersion.toVersion("17")
+    sourceCompatibility = JavaVersion.VERSION_17 // Source code is this Java version
+    targetCompatibility = JavaVersion.VERSION_17 // Byte code will be this JVM version
 }
 
 tasks {
     compileKotlin {
         kotlinOptions {
-            jvmTarget = "17"
+            jvmTarget = JavaVersion.VERSION_17 // Byte code will be this JVM version
         }
     }
     compileTestKotlin {
         kotlinOptions {
-            jvmTarget = "17"
+            jvmTarget = JavaVersion.VERSION_17 // Byte code will be this JVM version
         }
     }
 }
