--- a/build.gradle
+++ b/build.gradle
@@ -174,3 +174,23 @@ graalvmNative {
         }
     }
 }
+
+// Enable gradle incremental annotation processing for Java.
+tasks.withType(JavaCompile) {
+    options.compilerArgs = [
+            "-Amicronaut.processing.incremental=true",
+            "-Amicronaut.processing.annotations=${_group}.*",
+            "-Amicronaut.processing.group=${_group}",
+            "-Amicronaut.processing.module=${_module}",
+    ]
+}
+
+// Enable gradle incremental annotation processing for Kotlin.
+kapt {
+    arguments {
+        arg("micronaut.processing.incremental", true)
+        arg("micronaut.processing.annotations", "${_group}.*")
+        arg("micronaut.processing.group", _group)
+        arg("micronaut.processing.module", _module)
+    }
+}
