--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,10 @@ micronautVersion=3.5.3
 kotlinVersion=1.7.10
 
 
+applicationGroup=de.demo
+applicationModule=demo
+applicationTitle=Demo
+version=0.0.1-SNAPSHOT
 
 # dependency versions
 ## Gradle
