Remove quick build

--- a/build.gradle
+++ b/build.gradle
@@ -172,7 +172,7 @@ graalvmNative {
 
             buildArgs.add("--trace-class-initialization=kotlin.KotlinVersion,kotlin.jvm.internal.Reflection")
 
-            buildArgs.add("-Ob")
+            //buildArgs.add("-Ob")
         }
     }
 }
