--- a/build.gradle
+++ b/build.gradle
@@ -82,9 +82,9 @@ application {
     mainClass.set("com.example.ApplicationKt")
 }
 
-// TODO: thats not in greeter
-version = "0.1"
-group = "com.example"
+// // TODO: thats not in greeter
+// version = "0.1"
+// group = "com.example"
 
 dependencies {
     // If no specific version is defined, it might be provided by the Micronaut BOM
