Fix applicatio lcass name

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Application definition
-applicationGroup=de.demo
-applicationModule=demo
+applicationGroup=com
+applicationModule=example
 applicationTitle=Demo
 version=0.0.1-SNAPSHOT
 # other settings
