--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,10 @@
-micronautVersion=3.5.3
-kotlinVersion=1.7.10
-
-
-applicationGroup=de.demo
-applicationModule=demo
+# Application definition
+applicationGroup=com
+applicationModule=example
 applicationTitle=Demo
 version=0.0.1-SNAPSHOT
-
+# other settings
+kotlin.code.style=official
 # dependency versions
 ## Gradle
 gradleEnterpriseVersion=3.1.1
@@ -17,10 +15,10 @@ hibernateGradlePluginVersion=5.6.10.Final
 protobufPluginVersion=0.8.19
 dependencyLicenseReportVersion=2.1
 ## Kotlin
-#kotlinVersion=1.7.10
+kotlinVersion=1.7.10
 kotlinCoroutinesVersion=1.6.4
-### Micronaut
-#micronautVersion=3.5.3
+## Micronaut
+micronautVersion=3.5.3
 ## Data
 mariadbVersion=3.0.6
 postgresqlVersion=42.2.19
@@ -42,3 +40,8 @@ spekVersion=2.0.6
 assertjVersion=3.23.1
 mockitoJunitJupiterVersion=3.5.10
 ## Various
+
+# TODO: maybe use those performance tweaks
+#kapt.use.worker.api=true
+#kapt.incremental.apt=true
+#org.gradle.parallel=true # only improves multiproject builds 
