Copy build.gradle from greeter

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-applicationGroup=de.demo
-applicationModule=demo
+applicationGroup=com
+applicationModule=example
 applicationTitle=Demo
 version=0.0.1-SNAPSHOT
 
